# FileChecker

./: pyproject.toml
data/: test.txt  with_header.csv  without_header.csv
dataprocessor/: contentreader.py  directorywalker.py
tests/: test_contentreader.py  test_directorywalker.py
